web/web_common/pgrx_validation_derive/tests/ui/test_invalid_error_validation.stderr
error: Function `is_not_empty` must return a `Result<(), validation_errors::prelude::SingleFieldError>` or `Result<(), validation_errors::prelude::DoubleFieldError>` to be decorated with `validation`, but returns `Result < (), String >`.
 --> tests/ui/test_invalid_error_validation.rs:7:33
  |
7 | pub fn is_not_empty(_arg: &str) -> Result<(), String> {
  |                                 ^^^^^^^^^^^^^^^^^^^^^
